# SaveTheWorld-

./: PowerShell - WebRequest Certificate Problem  PowerShell - WebRequest Certificate Problem.md  PowerShell_Script.ps1  README.md  SOURCES.md  download_data.py  export.bib  first.Dockerfile  new_file  pyproject.toml  second.Dockerfile  sources.md  state_of_the_art.md
First_URL/: README.md
Second_URL/: README.md  download_data.py
colares_project/: __init__.py
colares_project/test/: test_data.py
docs/: export.bib
