[tool.poetry]
name = "colares_project"
version = "0.1.0"
description = "Nova IMS MLOps Project"
authors = ["Daniel Moraes <moraesd90@gmail.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
